--- a/app/src/main/res/layout/activity_noticia.xml
+++ b/app/src/main/res/layout/activity_noticia.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/txtNoticia"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
                 android:textColor="@android:color/black" />
         </LinearLayout>
     </ScrollView>
