--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,12 +18,14 @@
         app:pageColor="#00000000"
         app:radius="6dp"
         app:strokeColor="#FF777777"
-        app:strokeWidth="1dp" />
+        app:strokeWidth="1dp">
+
+    </com.synnapps.carouselview.CarouselView>
 
     <ListView
         android:id="@+id/lvNotas"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:divider="@android:color/transparent"
         android:dividerHeight="10dp"
         android:scrollbars="vertical"></ListView>
