--- a/app/src/main/res/layout/newstjam.xml
+++ b/app/src/main/res/layout/newstjam.xml
@@ -7,11 +7,13 @@
     <com.loopj.android.image.SmartImageView
         android:id="@+id/imgFoto"
         android:layout_width="100dp"
-        android:layout_height="100dp"/>
+        android:layout_height="100dp"
+        android:layout_marginLeft="5dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
