--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,6 +33,10 @@
                     android:id="@+id/nav_manual"
                     android:icon="@drawable/help"
                     android:title="Manual" />
+                <item
+                    android:id="@+id/nav_acerca"
+                    android:icon="@android:drawable/ic_menu_info_details"
+                    android:title="Acerca de" />
             </group>
         </menu>
     </item>
