--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#A22F50</color>
     <color name="colorPrimaryDark">#722138</color>
     <color name="colorAccent">#B31952</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
