Acerca de y Aviso de Privacidad

--- a/app/src/main/res/layout/newstjam.xml
+++ b/app/src/main/res/layout/newstjam.xml
@@ -17,13 +17,11 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <me.biubiubiu.justifytext.library.JustifyTextView
+        <TextView
             android:id="@+id/txtTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
             android:textStyle="bold" />
 
         <me.biubiubiu.justifytext.library.JustifyTextView
