--- a/app/src/main/res/layout/activity_login_jel.xml
+++ b/app/src/main/res/layout/activity_login_jel.xml
@@ -63,6 +63,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_email"
+                        android:drawableLeft="@drawable/ic_action_user"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:singleLine="true" />
@@ -81,6 +82,7 @@
                         android:hint="@string/prompt_password"
                         android:imeActionId="6"
                         android:imeActionLabel="@string/action_sign_in_short"
+                        android:drawableLeft="@drawable/ic_action_pass"
                         android:imeOptions="actionUnspecified"
                         android:inputType="textPassword"
                         android:maxLines="1"
