--- a/app/src/main/res/layout/activity_forgot_jel.xml
+++ b/app/src/main/res/layout/activity_forgot_jel.xml
@@ -29,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:drawableLeft="@drawable/ic_action_mail"
         android:ems="10"
         android:hint="Correo electrónico"
         android:inputType="textEmailAddress" />
