--- a/app/src/main/res/layout/activity_login_jel.xml
+++ b/app/src/main/res/layout/activity_login_jel.xml
@@ -28,7 +28,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
             android:text="Iniciar Sesión"
             android:textAlignment="center"
             android:textColor="@android:color/tertiary_text_light"
@@ -39,7 +39,7 @@
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="5dp"
             android:visibility="gone" />
 
         <ScrollView
@@ -51,7 +51,7 @@
                 android:id="@+id/email_login_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="3dp"
                 android:orientation="vertical">
 
                 <android.support.design.widget.TextInputLayout
@@ -73,7 +73,7 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
+                    android:layout_marginTop="3dp">
 
                     <EditText
                         android:id="@+id/password"
@@ -99,7 +99,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -127,7 +127,7 @@
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:background="@color/colorPrimary"
                     android:text="@string/action_sign_in"
                     android:textColor="@android:color/background_light"
@@ -136,7 +136,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -158,6 +158,16 @@
                         android:textStyle="bold" />
 
                 </LinearLayout>
+
+                <Button
+                    android:id="@+id/btnRegisterLocal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorAccent"
+                    android:text="Registro Local"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textColor="@android:color/background_light"
+                    android:textStyle="bold" />
 
             </LinearLayout>
         </ScrollView>
