Actualización versión androidx

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,6 +28,6 @@
         android:layout_height="wrap_content"
         android:divider="@android:color/transparent"
         android:dividerHeight="10dp"
-        android:scrollbars="vertical"></ListView>
+        android:scrollbars="vertical" />
 
 </LinearLayout>
