--- a/app/src/main/res/layout/activity_login_jel.xml
+++ b/app/src/main/res/layout/activity_login_jel.xml
@@ -122,6 +122,14 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+                </LinearLayout>
+
                 <Button
                     android:id="@+id/email_sign_in_button"
                     style="?android:textAppearanceSmall"
@@ -133,6 +141,13 @@
                     android:textColor="@android:color/background_light"
                     android:textStyle="bold" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+            </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -152,14 +167,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
-                        android:text="Registrate"
+                        android:text="Registrate aquí"
                         android:textAppearance="@style/TextAppearance.AppCompat"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold" />
 
                 </LinearLayout>
 
-                <Button
+                <!-- <Button
                     android:id="@+id/btnRegisterLocal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -167,7 +182,7 @@
                     android:text="Registro Local"
                     android:textAppearance="@style/TextAppearance.AppCompat"
                     android:textColor="@android:color/background_light"
-                    android:textStyle="bold" />
+                    android:textStyle="bold" /> -->
 
             </LinearLayout>
         </ScrollView>
